gcc/testsuite/g++.dg/torture/pr71464.C
struct A {}; 

struct B : virtual A
{
  B () {};
  B () {};  // { dg-error "cannot be overloaded" }
};
